--- a/doc/thesis/methods.tex
+++ b/doc/thesis/methods.tex
@@ -1,4 +1,5 @@
 \chapter{Methods}
+\label{sec:Methods}
 Although the particle filter I used for this work is a standard Regularized
 Particle filter, as described in \cite{Arulampalam2002a}, optimizing the 
 particle filter for use with FMRI data is non-trivial. 
@@ -89,7 +90,7 @@ $\tau_f$ & Gamma & 2.46  & .25\\
 $\epsilon$ & Gamma & .7  & .6 \\
 \hline
 \end{tabular}
-\caption{}
+\caption{Prior distributions used in the particle filter.}
 \label{tab:Prior} 
 \end{table}
 
@@ -246,12 +247,145 @@ became too unpredictable. Essentially, if the weight function isn't
 fixed across voxels, very noisy time series with no actual signal will 
 converge to nonsensical results. 
 In the future, it may be possible to set the standard deviation by
-taking a small sample from "resting" data and using the sample standard deviation.
+taking a small sample from resting data and using the sample standard deviation.
 Since this is the first attempt at using particle filters for modeling the 
 BOLD model, in this work I set the standard deviation manually at $.005$,
 because it gives a more consistency and control. 
 
-\subsection{Classical De-trending}
+\section{BOLD Noise}
+\label{sec:Introduction Noise}
+As demonstrated in \autoref{sec:BOLD Physiology} the BOLD response has been
+extensively studied and despite minor discrepancies, the cause of the BOLD 
+signal is well known. However, as FMRI detects an  
+aggregate signal over the space of cubic centimeters, there are
+plenty of sources of noise. Though local neurons act
+together (i.e. around the same time), the density of neurons, the
+density of capillaries, and slight differences in activation across 
+a particular voxel can all lead to signal attenuation and noise. 
+
+A particularly difficult form of noise present in FMRI is a low frequency
+drift, often characterized as a Wiener process (\cite{Riera2004}). 
+Though not present in all regions, as much as ten to fifteen percent
+of voxels can be affected (\cite{Tanabe2002}), thus it is prevalent enough to cause significant
+inference problems \cite{Smith2007}. It is still not
+clear what exactly causes this noise noise comes from, although it is possible it is 
+the result of magnets heating up, or some distortion in magnetic
+fields \cite{Smith2007}. It is clear that this drift signal is not solely
+due to a physiological effects, given its presence in cadavers and phantoms 
+\cite{Smith1999}. Interestingly, it is usually spatially correlated, and
+more prevalent at interfaces between regions, though 
+by no means limited to such areas. Though one potential source
+could be slight movement, given that co-registration of volumes to a single time
+point is standard, this seems unlikely. Regardless, the problem mandates
+the use of a high pass filter to make inference reasonably powered
+\cite{Smith2007}.
+
+In order to characterize the noise, I analyzed resting state data.
+During resting state, the patient is shown no images, and he is asked
+to avoid movement and complex thought, to the best of his abilities.
+Some limitations exist, for instance EPI sequences are extremely loud
+which could cause some stimulus in the auditory cortex, and of course
+very long sequences could give the patient time for his mind to wander.
+Overall though there should be no activation, and thus the signal will
+consist entirely of noise. Therefore resting state data is perfect
+for analyzing the noise distribution. The locations were chosen from
+various points around the brain, all in grey matter voxels. The time
+series were also chosen because they were representative of different types
+of noise I found in the resting state data.
+
+Because most methods (including the one used in this paper)
+assume the noise realizations are independent of each other, the auto-
+correlation is of particular interest (which is a necessary but not
+sufficient condition for independence). Gaussianity is also a common
+assumption made in studies of FMRI data, though that assumption is not
+made in this work. Regardless, comparing the distribution to a Gaussian
+is informative, so I used Q-Q plots to compare example data with the
+Normal distribution. Additionally, in FMRI data the noise is often considered 
+to be Wiener \cite{Riera2003}. Recall that a Wiener random process is
+characterized by steps that are Gaussian; in other words the difference between
+any two samples is Normally distributed. The simulations discussed in 
+\autoref{sec:Single Voxel Simulation} make use of this, 
+by adding a Wiener random process to the overall signal. To determine
+whether the noise is in fact Wiener, the distribution of 
+the difference between adjacent measurements was plotted against
+a Gaussian. Wiener processes further assume that the steps are independent;
+so the steps should have near flat autocorrelation functions.
+
+Finally, removal of the drift is often
+performed with some variation of a high pass filter, 
+so I checked the noise distribution after applying such a filter (in
+this case the subtraction of a spline, see \autoref{sec:Methods Preprocessing}).
+Here I wanted to know how effective my high pass filter at the removal of
+Wiener noise.
+
+\autoref{fig:QQDC} shows the 
+results with a regression line fit to the points on the Q-Q plot.
+Recall that in a Quartile-Quartile (Q-Q) plot, if the points plotted on the 
+x-axis and the points
+on the y-axis come from the same \emph{type} of distribution then all the points will
+fall on a line. Differences in the variance will cause the line to have a slope
+other than 1, while differences in the expected value will cause the fitted line
+to be shifted. In these Q-Q plots, the points are being compared to the standard
+Gaussian distribution, so the quality of the line fit determines how closely the points
+fit the Gaussian distribution. Note that in \autoref{fig:QQDC} the points have all been 
+normalized (changed to percent difference).
+\begin{figure}
+\centering
+\subfigure[]{\label{fig:QQDC:A}\includegraphics[trim=6cm 1cm 6cm 0cm,width=14cm]{images/noise2_0009_29_49_9}}
+\subfigure[]{\label{fig:QQDC:B}\includegraphics[trim=6cm 1cm 6cm 0cm,width=14cm]{images/noise2_0009_34_43_24}}
+\subfigure[]{\label{fig:QQDC:C}\includegraphics[trim=6cm 1cm 6cm 0cm,width=14cm]{images/noise2_0009_22_38_23}}
+\subfigure[]{\label{fig:QQDC:D}\includegraphics[trim=6cm 1cm 6cm 0cm,width=14cm]{images/noise2_0009_37_29_24}}
+
+%\subfigure{\includegraphics[trim=6cm 1cm 0 0cm,width=17cm]{images/noise_0009_19-24-10.pdf}}
+%\subfigure{\includegraphics[trim=6cm 1cm 0 0cm,width=17cm]{images/noise_0009_20-45-18.pdf}}
+%\subfigure{\includegraphics[trim=6cm 1cm 0 0cm,width=17cm]{images/noise_0009_23-47-18.pdf}}
+%\subfigure{\includegraphics[trim=6cm 1cm 0 0cm,width=17cm]{images/noise_0009_35-49-9.pdf}}
+
+\caption{Q-Q Plots of normalized resting state data}
+\label{fig:QQDC}
+\end{figure}
+
+\begin{figure}
+\centering
+\subfigure[]{\label{fig:QQDDelta:A}\includegraphics[trim=6cm 1cm 6cm 0,width=14cm]{images/noise2_0009d_29_49_9}}
+\subfigure[]{\label{fig:QQDDelta:B}\includegraphics[trim=6cm 1cm 6cm 0,width=14cm]{images/noise2_0009d_34_43_24}}
+\subfigure[]{\label{fig:QQDDelta:C}\includegraphics[trim=6cm 1cm 6cm 0,width=14cm]{images/noise2_0009d_22_38_23}}
+\subfigure[]{\label{fig:QQDDelta:D}\includegraphics[trim=6cm 1cm 6cm 0,width=14cm]{images/noise2_0009d_37_29_24}}
+\caption{Q-Q Plots of resting state data, using the BOLD signal changes}
+\label{fig:QQDelta}
+\end{figure}
+
+A Wiener process should still conform to the normal distribution, with a 
+variance proportional to the run-time. Note that \autoref{fig:QQDC:A} and \autoref{fig:QQDC:B}
+are relatively well described by a Gaussian process with a small autocorrelation, 
+\autoref{fig:QQDC:C} and \autoref{fig:QQDC:D} are not. In particular the tails of \autoref{fig:QQDC:C}
+do not seem to fit the Gaussian well. Also note the significant autocorrelation in
+\autoref{fig:QQDC:C} and \autoref{fig:QQDC:D}. As expected, the noise is not strictly
+Gaussian white noise.  On the other hand, the steps do conform rather
+closely to the normal distribution.
+As expected, most of the autocorrelation disappears for the step data. Given
+that the steps seem to fit the Normal distribution, the low autocorrelation
+indicates that the steps could be Independently Distributed. 
+Therefore, the assumption that the noise follows a Wiener process seems to
+be correct. 
+
+\begin{figure}
+\centering
+\subfigure[]{\label{fig:QQs:A}\includegraphics[trim=6cm 1cm 6cm 0cm,width=14cm]{images/noise2_0009s_29_49_9}}
+\subfigure[]{\label{fig:QQs:B}\includegraphics[trim=6cm 1cm 6cm 0cm,width=14cm]{images/noise2_0009s_34_43_24}}
+\subfigure[]{\label{fig:QQs:C}\includegraphics[trim=6cm 1cm 6cm 0cm,width=14cm]{images/noise2_0009s_22_38_23}}
+\subfigure[]{\label{fig:QQs:D}\includegraphics[trim=6cm 1cm 6cm 0cm,width=14cm]{images/noise2_0009s_37_29_24}}
+\caption{Q-Q Plots of resting state data, after the de-trending}
+\label{fig:QQSpline}
+\end{figure}
+
+De-trending the time-series by subtracting a spline fit to the distribution
+removed much of the autocorrelation present in \autoref{fig:QQDC:C} and \autoref{fig:QQDC:D},
+though clearly not perfectly. Though the distributions still do not exactly fit
+the Normal, \autoref{fig:QQs:D} clearly is much improved compared to \autoref{fig:QQDC:D}.
+In all, the de-trending is effectively removing Wiener noise. 
+
+\subsection{Detrending}
 \label{sec:Detrend}
 The non-stationary
 aspect of a Weiner process, presumably the result of integrating some
@@ -261,7 +395,7 @@ demonstrated that this component is prevalent, and may in fact be an inherent  c
 of FMRI. In some studies, as many as half the voxels benefit from detrending, presenting
 a serious barrier to inference (\cite{Smith2007}). All the existing methods are performed
 during the preprocessing stage, rather than as an integral part of analyzing the BOLD
-signal. There is no shortage of theories on the "best" method of detrending; however
+signal. There is no shortage of detrending methods; however
 in a head to head comparison, \cite{Tanabe2002}, showed that in most cases subtracting off
 a spline works the best. The benefit of the spline versus wavelets, high pass 
 filtering or other DC removal techniques is that the frequency response is not set.
@@ -271,7 +405,7 @@ shift heavily over the course of time. In spite of this, the spline will still r
 amount of signal, just like all of these methods, which is why I considered the method proposed
 in \autoref{sec:Methods Delta Based Inference}.
 
-The method I used to calculate the spline was picking one knot for every 15
+The method I used to calculate the spline was picking one knot for every 20
 measurements in an image. Thus a 10 minute session at a repetition time of 
 2.1 seconds would have 19 knots. The knot first and last knots were each 
 given half the number of samples as the rest of the knots; which were all 
@@ -284,8 +418,8 @@ to be designed with this in mind.
 
 When using the median-based spline techniques, the normalized signal will,
 by definition have a median near zero. 
-The problem with this is this is not the "natural" BOLD signal. More specifically,
-when the signal is inactive, the BOLD response \emph{should} be at 0\% change from
+The problem with this is this is not the natural state of the BOLD signal. More specifically,
+when the signal is inactive, the BOLD response should be at 0\% change from
 the base level; activation may then increase, or for short periods decrease from this base.
 After removing the spline, the BOLD resting state will be below 0\%.
 This is problematic because it reduces the ability of an algorithm to learn.
@@ -311,7 +445,7 @@ y_{\text{gain}, 0:K} = 2\text{median}_{i=0:K}(y_i - \text{median}(y_{0:K}))
 \end{equation}
 
 \begin{figure}
-\caption{image of de-spline'd lines with "true" lines}
+\caption{Image of de-spline'd lines with true lines}
 \label{fig:DesplineQuality}
 \end{figure}
 
@@ -329,7 +463,7 @@ high-pass filter method.
 \label{sec:Methods Delta Based Inference}
 The alternative to these sorts of low frequency manipulation is to
 go around the problem in another way. Here, I propose and test a 
-different method of dealing with the so called "drift". 
+different method of dealing with the drift. 
 Instead of comparing the direct output of the particle filter with the direct
 measurement, the algorithm would compare the change in signal over a single TR,
 with the result of integrating the model for the same period. 
@@ -366,21 +500,15 @@ rather than string of direct readings.
 \section{Preprocessing}
 \label{sec:Methods Preprocessing}
 As discussed in the section on de-trending, the normal pipeline for analyzing
-FMRI involves a great deal of preprocessing. The first and most important
+FMRI involves a several preprocessing steps. The first and most important
 task is motion correction. To do this, a single volume in time is chosen, and
-volumes at every other time are registered to this one volume. This takes care
-of motion by the patient as well as some small changes in the magnetic
-fields that cause the image to shift. After this, a structural image of the
-patient is often registered to an atlas so that a grey-matter mask may
-be created. Since all the "activation" should occur in grey matter voxels,
-it made sense to restrict analysis to only these sections; although
-there may be partially grey-matter areas that are missed. This significantly
-eases computation time though. 
-
-In normal statistical parametric mapping, a gaussian smoothing
+volumes at every other time are registered to this one volume. This corrects
+for motion by the patient as well as small changes in the magnetic
+fields that cause the image to shift. 
+In conventional statistical parametric mapping, a gaussian smoothing
 filter is applied across the image as discussed in \autoref{sec:RFT}.
-After this, detrending is performed discussed by \autoref{sec:Detrend}.
-Recall that FMRI signal levels are unit-less and even though detrending isn't
+After this, detrending is performed as discussed by \autoref{sec:Detrend}.
+Recall that FMRI signal levels are unit-less and though detrending is not
 always necessary, at the very least the data must be converted 
 into \% difference from the baseline. Changing to 
 \% difference removes no real information
