--- a/doc/thesis/resultsB.tex
+++ b/doc/thesis/resultsB.tex
@@ -53,7 +53,7 @@
 \label{sec:RealData}
 Modeling the BOLD response is of course not of much use if it is only done in a 
 single voxel. Although this algorithm will hopefully lead to more novel methods 
-of analysis, the standard use for modeling the BOLD signal is to locate "activation".
+of analysis, the standard use for modeling the BOLD signal is to locate activation.
 Activation is essentially defined as areas where the input seems to directly drive
 the BOLD response, as opposed to there being intermediate factors controlling it. 
 Once areas where the BOLD 
@@ -88,7 +88,7 @@ the result of the particle filter is simply a normalized square-root of the mean
 residual. Thus, lower is better, and zero is a perfect fit in the particle filter whereas
 infinity is a perfect fit in \autoref{fig:hm_canon_spm}. Note that it would seem that there
 are quite a few dispersed areas with decent fits in \autoref{fig:hm_canon_pfilter}. Also,
-interestingly the lowest square-root MSE (SMSE) was just above $.7$. 
+interestingly the lowest error was just above $.7$. 
 For the sake of completeness \autoref{fig:hm_canon_pfilter85} shows the same image but
 thresheld at $.85$ rather than $1$. Obviously this image seems like a closer match to
 the results of SPM, however, the results of \autoref{fig:hm_canon_pfilter} are interesting.
@@ -114,7 +114,7 @@ the results of SPM, however, the results of \autoref{fig:hm_canon_pfilter} are i
 \subfigure{\label{fig:scale_pfilter} \includegraphics[scale=.3]{images/scale2}}
 \caption{Sagittal, coronal and axial slices of SPM results (\autoref{fig:hm_canon_pfilter_x} \autoref{fig:hm_canon_pfilter_y} 
          \autoref{fig:hm_canon_pfilter_x}), as well as a series of axial slices, \autoref{fig:hm_pfilter}. 
-         Units of match is normalized $\sqrt{MSE}$. The lowest (best) levels were $.7$,
+         Units of match is normalized error. The lowest (best) levels were $.7$,
          whereas the worst levels could go higher than 100 (not shown).}
 \label{fig:hm_canon_pfilter}
 \end{figure}
@@ -148,7 +148,7 @@ the results of SPM, however, the results of \autoref{fig:hm_canon_pfilter} are i
 \end{figure}
 
 I chose several voxels to discuss further from \autoref{fig:hm_canon_pfilter} and \autoref{fig:hm_canon_spm}.
-The first voxel, labeled 1, had a very high T-score as well as a very low SMSE (around $.7$). Thus, the
+The first voxel, labeled 1, had a very high T-score as well as a low error (around $.7$). Thus, the
 fit should be very good in both the SPM and particle filter output; this comparison is shown in 
 \autoref{fig:comp1}. Recall that SPM worked on a slightly less noisy time series because of the
 spatial smoothing; this explains the lack of the sharp peak in the particle filter's preprocessed
@@ -156,7 +156,7 @@ data. Regardless, as expected, both fits are very good.
 
 I chose the second voxel (\autoref{fig:comp2}) because it was active in SPM and it would appear to be in a prime
 location to be active in the SPM image (given the results in the surrounding voxels). The fit,
-however shows just why the voxel did not have a particularly good SMSE. Although certain peaks 
+however shows just why the voxel did not have a particularly good error. Although certain peaks 
 seem to fit rather well the input doesn't seem to correlate that well with the BOLD response. For
 instance 75 seconds in, the stimulus is clearly not present, and so the signal should drop off; yet
 it doesn't. This is a good example of a voxel that seems to be reacting to something in addition to
@@ -164,19 +164,19 @@ the direct stimulus. Even in what should be a rather smooth time-series in SPM, 
 looks very noisy. 
 
 The third voxel, compared in \autoref{fig:comp3}, was far away from any other active voxels 
-and yet had a very low (around $.7$) SMSE.
-In both preprocessed time-series the input is extremely noisy, yet by the normalized SMSE
+and yet had a very low (around $.7$) residual.
+In both preprocessed time-series the input is extremely noisy, yet by the normalized residual 
 the response is good. This could be an example of a false positive, although the general trend
 of the response seems to follow the estimated response. 
 
-Whereas the third voxel was a region that was considered "active" by the particle filter
+Whereas the third voxel was a region that was considered active by the particle filter
 algorithm but not SPM; the fourth voxel is the reverse. The particle filter did not
 find a good fit, but in SPM8 the voxel had a decently high T-score. \autoref{fig:comp4} shows
 the line fit for each algorithm, and neither are particularly good; though in a few areas
 the upward or downward movements seem to be correlated. Regardless, this would seem to be
 a false positive from SPM8. 
 
-The fifth, and last single voxel to be analyzed is one more area that had a low SMSE according
+The fifth, and last single voxel to be analyzed is one more area that had a low residual according
 to the particle filter, and yet did not show up in SPM. The line fit is shown in \autoref{fig:comp5},
 and unlike voxel 3 is certainly \emph{not} a false positive. Regions such as this are a very 
 good example of why spatial smoothing can be problematic. By having a more adaptive model, and
@@ -207,24 +207,20 @@ and thus the need for spatial smoothing is somewhat reduced.
 \section{Discussion}
 From the maps generated, the similarities to SPM8's results are encouraging. At the 
 very least the output of the particle filter seems to meet the quality of SPM. The normalization
-of the MSE is certainly necessary. Although there is no hard threshold on the 
-normalized SMSE, it would appear that the normalization is providing a reasonable
+of the residual is certainly necessary. Although there is no hard threshold on the 
+normalized residual, it would appear that the normalization is providing a reasonable
 ordering of regression quality. The question of what threshold to use is a difficult one.
-The actual division of the Square Root of the MSE by an estimate for the standard deviation
+The actual division of the residual by an estimate for the standard deviation
 of the signal would seem to mandate a threshold less than one. However, recall that the 
 same media-absolute-deviation was added to the de-trended signal as a DC-gain. This means
-that a flat, no-response bold signal will actually have a SMSE greater than the standard 
-deviation of the signal. Then again, the SMSE may be reduced for any point where the 
+that a flat, no-response bold signal will actually have a residual greater than the standard 
+deviation of the signal. Then again, the residual may be reduced for any point where the 
 model spikes up due to stimuli. Ultimately if the model were to run right down the 
-center of the distribution the SMSE would be equal to the MAD, and would have a 
-normalized SMSE of 1. Thus, again, a normalized SMSE (NSMSE) of 1 is a good start for the 
-threshold. The question then, is what the probability of getting NSMSE below some 
-threshold randomly; which would depend on factors such as the amount of stimuli
-present in the signal. For now I would say that .85 seems to be a decent threshold,
-although it may be a bit conservative. 
-
+center of the distribution the residual would be equal to the MAD, and would have a 
+normalized residual of 1. Thus, again, a normalized residual of 1 is at least as 
+good as a flat line at the median. 
 Other measures of fitness could also be used such as mean of the absolute error or 
 mutual information. Although least squares is the best linear unbiased estimator,
 this signal is heavily nonlinear, so other estimators may exceed the OLS in terms
-of likelihood. Regardless, the NSMSE seems to provide a very good solution at this
-point, giving comparable results to SPM.
+of likelihood. Regardless, the normalized residual provides a good solution at this
+point, comparable to SPM.
